[tool.poetry]
name = "unemp_analysis"
version = "0.1.0"
description = ""
authors = ["edgardoa91 <edgardoa910@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fredapi = "^0.5.0"
matplotlib = "^3.5.2"
plotly = "^5.9.0"

[tool.poetry.dev-dependencies]
streamlit = "^1.10.0"
pandas = "^1.4.3"
numpy = "^1.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
